--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <logo>
-  <a href="/" aria-label="Go home">
+  <a href="/" aria-label="Go home" class="flex items-center gap-1">
     <Icon
       name="logo-svg-light-mode"
       width={60}
@@ -16,5 +16,8 @@ import { Icon } from "astro-icon/components";
       height={60}
       class="hidden dark:block"
     />
+    <span class="uppercase font-geist-700 tracking-wide text-eerie-black dark:text-white-smoke">
+      jordan<span class="text-pigment-green dark:text-dark-pastel-green">mingle</span>
+    </span>
   </a>
 </logo>
