--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -16,7 +16,7 @@ import { Icon } from "astro-icon/components";
       height={60}
       class="hidden dark:block"
     />
-    <span class="uppercase font-geist-700 tracking-wide text-eerie-black dark:text-white-smoke">
+    <span class="uppercase font-geist-700 tracking-wide text-eerie-black dark:text-white-smoke text-lg">
       jordan<span class="text-pigment-green dark:text-dark-pastel-green">mingle</span>
     </span>
   </a>
