--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,7 @@
 ---
-// components
+// astro-icon
 import { Icon } from "astro-icon/components";
+// components
 import Link from "./Link.astro";
 import DarkModeToggle from "../components/DarkModeToggle.astro";
 // data
