--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -1,8 +1,8 @@
 ---
 // layout
-import MainLayout from "../layouts/MainLayout.astro";
+import MainLayout from "../../layouts/MainLayout.astro";
 // link component
-import Link from "../components/Link.astro";
+import Link from "../../components/Link.astro";
 ---
 
 <MainLayout title="About" description="About Page">
