--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Nav from "./Nav.astro";
 ---
 
 <header
-  class="w-full sticky top-0 z-50 border-b border-black/40 dark:border-white-smoke/40 bg-white/95 backdrop-blur supports-[backdrop-filter]:bg-white/60 dark:bg-smoky-black/95 dark:supports-[backdrop-filter]:bg-smoky-black/60"
+  class="w-full sticky top-0 z-50 border-b border-black/40 dark:border-white-smoke/40 bg-white-smoke/95 backdrop-blur supports-[backdrop-filter]:bg-white/80 dark:bg-smoky-black/95 dark:supports-[backdrop-filter]:bg-smoky-black/80"
 >
   <!-- container -->
   <div
