--- a/src/pages/articles/search.astro
+++ b/src/pages/articles/search.astro
@@ -32,7 +32,7 @@ const searchResults = allBlogArticles.filter((article) => {
 ---
 
 <MainLayout title="Search Results">
-  <button>
+  <button class="mb-8">
     <Link
       text={"Back To Articles"}
       href={"/articles/"}
