--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -14,7 +14,7 @@ interface Props {
 }
 ---
 
-<div class="w-full max-w-md mx-auto mt-10">
+<div class="w-full max-w-full mx-auto mt-10">
   <div
     class="dark:bg-white dark:text-black bg-black text-white border-2 border-dim-gray dark:border-platinum hover:border-pigment-green hover:dark:border-dark-pastel-green rounded-2xl overflow-hidden shadow-xl"
   >
