--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -13,16 +13,17 @@ interface Props {
 ---
 
 <div class="flex justify-between my-10">
+  <!-- prev -->
   <a
     href={"/articles/?page=" + (currentPage - 1)}
     class={disablePrevious
       ? "flex items-center gap-2 bg-gray-100 dark:bg-black p-2 mb-6 text-dim-gray pointer-events-none rounded-2xl"
-      : "flex items-center gap-2 bg-platinum text-black  border border-dark-green dark:border-dark-pastel-green rounded-2xl p-2 mb-6 hover:bg-dark-green dark:hover:bg-dark-pastel-green hover:text-white dark:hover:text-black"}
+      : "flex items-center gap-2 bg-platinum text-black  border border-pigment-green dark:border-dark-pastel-green rounded-2xl p-2 mb-6 hover:bg-pigment-green dark:hover:bg-dark-pastel-green hover:text-white dark:hover:text-black"}
   >
     <Icon name="arrow-left" width={24} height={24} />
     Previous
   </a>
-  <!-- Add page numbers section -->
+  <!-- next -->
   <a
     href={"/articles/?page=" + (currentPage + 1)}
     class={disableNext
